--- a/clinicAssist/src/pages/home/home.html
+++ b/clinicAssist/src/pages/home/home.html
@@ -11,8 +11,14 @@
   <h3>Ionic Menu Starter</h3>
 
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
+    Avikalp, If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
   </p>
 
   <button ion-button secondary menuToggle>Toggle Menu</button>
+
+  <input type="text" name="test_text_field" [(ngModel)]="textField"/>
+  {{textField}} <br>
+  {{x}}
+  {{x-y+z}}
+  <input placeholder="{{textField}}" />
 </ion-content>
