--- a/clinicAssist/src/pages/translator/translator.html
+++ b/clinicAssist/src/pages/translator/translator.html
@@ -28,13 +28,13 @@
 				</div>
 			</ion-row>
 			<ion-row>
-				<ion-select ion-col col-6 [(ngModel)]="doctorLanguage">
+				<ion-select ion-col col-6 [(ngModel)]="doctorLanguage" interface='action-sheet'>
 					<ion-option value="en">English</ion-option>
 					<ion-option value="af">Afrikaans</ion-option>
 					<ion-option value="hi">Hindi</ion-option>
 					<ion-option value="pt">Portugese</ion-option>
 				</ion-select>
-				<ion-select ion-col col-6 [(ngModel)]="patientLanguage" [selectOptions]="selectOptions">
+				<ion-select ion-col col-6 [(ngModel)]="patientLanguage" interface='popover'>
 					<ion-option value="en">English</ion-option>
 					<ion-option value="af">Afrikaans</ion-option>
 					<ion-option value="hi">Hindi</ion-option>
