--- a/clinicAssist/src/pages/translator/translator.html
+++ b/clinicAssist/src/pages/translator/translator.html
@@ -28,7 +28,8 @@
 				</div>
 			</ion-row>
 			<ion-row>
-				<ion-select ion-col col-6 [(ngModel)]="doctorLanguage" interface='action-sheet'>
+				<!-- <ion-select ion-col col-6 [(ngModel)]="doctorLanguage" interface='action-sheet'> -->
+				<ion-select ion-col col-6 [(ngModel)]="doctorLanguage" interface='popover'>
 					<ion-option value="en">English</ion-option>
 					<ion-option value="af">Afrikaans</ion-option>
 					<ion-option value="hi">Hindi</ion-option>
@@ -50,15 +51,19 @@
 		
 		<ion-scroll scrollY=true style="flex: 1 0 0;" >
 		   <ion-list >
-		   		<ion-auto-complete [dataProvider]="getResponses"></ion-auto-complete>
-			 	<ion-item>This is one item</ion-item>
-			 	<ion-item>
-			 		
-			 	</ion-item>
+			 	<ion-item><small>The conversation begins here.</small></ion-item>
 		   </ion-list>
 		</ion-scroll>
 
 		<ion-grid>
+			<!-- <ion-auto-complete [dataProvider]="getResponses" ion-col col-10>Type</ion-auto-complete> -->
+			<ion-row>
+				<ion-auto-complete [dataProvider]="getResponses" placeholder="Type here..." ion-col col-10></ion-auto-complete>
+				<button ion-button ion-col col-2 class="send-icon-button" (click)="translate()" round icon-only>
+					<ion-icon name="send"></ion-icon>
+				</button>
+			</ion-row>
+
 			<button ion-button ion-row (click)="translate()">Translate</button>
 		</ion-grid>
 	</div>
