Restructured the database - now we only have two tables instead of three to accomodate the fact that there is a one-to-many relationship between meanings and sentences; not many-to-many. Also, added refreshTables function in database.ts and added button to use it in Contribute page.

--- a/clinicAssist/src/pages/contribute/contribute.html
+++ b/clinicAssist/src/pages/contribute/contribute.html
@@ -95,5 +95,9 @@
 		<button ion-button type="submit" block>Submit</button>
 	</form>
 
+	<hr>
+
+	<button ion-button block (click)="refreshTables()">Refresh ALL tables</button>
+
 
 </ion-content>
