--- a/clinicAssist/src/pages/translator/translator.html
+++ b/clinicAssist/src/pages/translator/translator.html
@@ -1,17 +1,17 @@
 <!--
-  Generated template for the TranslatorPage page.
+	Generated template for the TranslatorPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
+	See http://ionicframework.com/docs/components/#navigation for more info on
+	Ionic pages and navigation.
 -->
 <ion-header>
 
-  <ion-navbar>
-  	<button ion-button menuToggle>
-	  <ion-icon name="menu"></ion-icon>
-	</button>
-	<ion-title>Auto-Translator</ion-title>
-  </ion-navbar>
+	<ion-navbar>
+		<button ion-button menuToggle>
+			<ion-icon name="menu"></ion-icon>
+		</button>
+		<ion-title>Auto-Translator</ion-title>
+	</ion-navbar>
 
 </ion-header>
 
@@ -21,10 +21,10 @@
 		<ion-grid>
 			<ion-row>
 				<div ion-col col-6>
-					{{textView_doctorLanguage}}
+					{{doctorLanguageLabel}}
 				</div>
 				<div ion-col col-6>
-					{{textView_patientLanguage}}
+					{{patientLanguageLabel}}
 				</div>
 			</ion-row>
 			<ion-row>
@@ -55,10 +55,33 @@
 		</ion-grid>
 		
 		<ion-scroll scrollY=true style="flex: 1 0 0;" >
-		   <ion-list>
-			 	<ion-item *ngIf="conversation.length == 0"><small>The conversation begins here.</small></ion-item>
-			 	<ion-item *ngFor="let message of conversation"><small>{{message}}</small></ion-item>
-		   </ion-list>
+			<ion-grid>
+				<ion-row *ngFor="let message of conversation">
+				  <ion-col col-9 *ngIf="message.sender_is_left && current_language == doctorLanguage" class="message" [ngClass]="{'mymessage': !message.sender_is_left, 'othermessage': message.sender_is_left}">
+					<!-- <span class="user_name">{{ message.sender_is_left }}:</span><br> -->
+					<span>{{ message.left_text }}</span>
+					<div class="time">{{message.created | date:'dd.MM hh:MM'}}</div>
+				  </ion-col>
+
+				  <ion-col col-9 *ngIf="message.sender_is_left && current_language != doctorLanguage" class="message" [ngClass]="{'mymessage': !message.sender_is_left, 'othermessage': message.sender_is_left}">
+					<!-- <span class="user_name">{{ message.sender_is_left }}:</span><br> -->
+					<span>{{ message.right_text }}</span>
+					<div class="time">{{message.created | date:'dd.MM hh:MM'}}</div>
+				  </ion-col>
+
+				  <ion-col offset-3 col-9 *ngIf="!message.sender_is_left && current_language == patientLanguage" class="message" [ngClass]="{'mymessage': !message.sender_is_left, 'othermessage': message.sender_is_left}">
+					<!-- <span class="user_name">{{ message.sender_is_left }}:</span><br> -->
+					<span>{{ message.right_text }}</span>
+					<div class="time">{{message.created | date:'dd.MM hh:MM'}}</div>
+				  </ion-col>
+
+				  <ion-col offset-3 col-9 *ngIf="!message.sender_is_left && current_language != patientLanguage" class="message" [ngClass]="{'mymessage': !message.sender_is_left, 'othermessage': message.sender_is_left}">
+					<!-- <span class="user_name">{{ message.sender_is_left }}:</span><br> -->
+					<span>{{ message.left_text }}</span>
+					<div class="time">{{message.created | date:'dd.MM hh:MM'}}</div>
+				  </ion-col>
+				</ion-row>
+			  </ion-grid>
 		</ion-scroll>
 
 		<ion-grid>
