--- a/clinicAssist/src/pages/translator/translator.html
+++ b/clinicAssist/src/pages/translator/translator.html
@@ -84,7 +84,7 @@
 			  </ion-grid>
 		</ion-scroll>
 
-		<ion-grid>
+		<ion-grid *ngIf="activity_state">
 			<!-- <ion-auto-complete [dataProvider]="completeTestService" >Type</ion-auto-complete> -->
 			<ion-row>
 				<ion-auto-complete [dataProvider]="completeTestService" [(ngModel)]="text_field_content" [options]="{ placeholder : 'Type here...' }" [showResultsFirst]="true" style="width: 75%" #myTextBox></ion-auto-complete>
